--- a/table_agg_hame_credit.ipynb
+++ b/table_agg_hame_credit.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "cM9ShLoKEYzy"
       ],
-      "authorship_tag": "ABX9TyNNTaSLq+/aYW4442Q3XdAD",
+      "authorship_tag": "ABX9TyNQadVGqIPsBHp/oEka7CA0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,9 +34,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 69
         },
-        "outputId": "ac8a3941-19a3-4f53-a2ac-8738d4d854f0"
+        "outputId": "7e554704-694a-4006-9c07-fab70c9e7c80"
       },
       "source": [
         "import pandas as pd\n",
@@ -52,12 +52,20 @@
         "from google.colab import drive  \n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -2582,6 +2590,21 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "I3ImPhetygfM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def one_hot_encoder(df):\n",
+        "    categorical_columns = [col for col in df.columns if df[col].dtype == 'object']\n",
+        "    return pd.get_dummies(df, columns=categorical_columns, dummy_na=True)"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "Uw1GjNfrgs2W",
         "colab_type": "code",
         "colab": {}
@@ -2607,10 +2630,6 @@
         "cnt_numeric_fields_statistics.columns = columns\n",
         "\n",
         "train = train.merge(cnt_numeric_fields_statistics, on = 'SK_ID_CURR', how = 'left').fillna(0)\n",
-        "\n",
-        "def one_hot_encoder(df):\n",
-        "    categorical_columns = [col for col in df.columns if df[col].dtype == 'object']\n",
-        "    return pd.get_dummies(df, columns=categorical_columns, dummy_na=True)\n",
         "\n",
         "credit_type_ohe = one_hot_encoder(bureau)\n",
         "\n",
@@ -2730,6 +2749,176 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p43g-lkgyOhy",
+        "colab_type": "text"
+      },
+      "source": [
+        "## BUREAU_BALANCE"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Lct-jRGBysgG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train = pd.read_csv('/content/drive/My Drive/HomeCredit/train.csv')"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rwp29GDFyQ_5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "outputId": "a5070aaf-c70e-49a1-fcbf-065c6c9aba08"
+      },
+      "source": [
+        "bureau_balance = pd.read_csv('/content/drive/My Drive/HomeCredit/bureau_balance.csv')\n",
+        "bureau_balance.head()"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>SK_ID_BUREAU</th>\n",
+              "      <th>MONTHS_BALANCE</th>\n",
+              "      <th>STATUS</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>5715448</td>\n",
+              "      <td>0</td>\n",
+              "      <td>C</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>5715448</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>C</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>5715448</td>\n",
+              "      <td>-2</td>\n",
+              "      <td>C</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>5715448</td>\n",
+              "      <td>-3</td>\n",
+              "      <td>C</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5715448</td>\n",
+              "      <td>-4</td>\n",
+              "      <td>C</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   SK_ID_BUREAU  MONTHS_BALANCE STATUS\n",
+              "0       5715448               0      C\n",
+              "1       5715448              -1      C\n",
+              "2       5715448              -2      C\n",
+              "3       5715448              -3      C\n",
+              "4       5715448              -4      C"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fJNUY3uSzBqi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def aggregate_numeric_fields(df, columns_to_drop, group_by, agg_methods, name_prefix):\n",
+        "    cnt_numeric_fields_statistics = df.drop(columns = columns_to_drop).groupby(group_by, as_index = False).agg(agg_methods).reset_index()\n",
+        "\n",
+        "    columns = [group_by]\n",
+        "    for column in cnt_numeric_fields_statistics.columns.levels[0]:\n",
+        "        if column == group_by:\n",
+        "            continue\n",
+        "\n",
+        "        for stat in cnt_numeric_fields_statistics.columns.levels[1][:-1]:\n",
+        "            columns.append('{}_{}_{}'.format(name_prefix, column, stat))\n",
+        "\n",
+        "    cnt_numeric_fields_statistics.columns = columns\n",
+        "\n",
+        "    return cnt_numeric_fields_statistics"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "42UdwexuyaXc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "cnt_numeric_fields_statistics = aggregate_numeric_fields(bureau_balance, ['STATUS'], 'SK_ID_BUREAU', ['min', 'mean', 'sum'], 'balance')\n",
+        "status_ohe = one_hot_encoder(bureau_balance)\n",
+        "\n",
+        "# И статистику по этому кодированию.\n",
+        "\n",
+        "status_ohe_statistics = aggregate_numeric_fields(status_ohe, [], 'SK_ID_BUREAU', ['min', 'max', 'mean', 'sum'], 'balance')\n",
+        "\n",
+        "bureau_balance_features = cnt_numeric_fields_statistics.merge(status_ohe_statistics, on = 'SK_ID_BUREAU', how = 'left').fillna(0)\n",
+        "bureau_X_bureau_balance_features = bureau[['SK_ID_CURR', 'SK_ID_BUREAU']].merge(bureau_balance_features, on = 'SK_ID_BUREAU', how = 'left').fillna(0)\n",
+        "\n",
+        "# И опять статистику.\n",
+        "\n",
+        "bureau_X_bureau_balance_features_features = aggregate_numeric_fields(bureau_X_bureau_balance_features, ['SK_ID_BUREAU'], 'SK_ID_CURR', ['min', 'max', 'mean', 'sum'], 'id')\n",
+        "train = train.merge(bureau_X_bureau_balance_features_features, on = 'SK_ID_CURR', how = 'left').fillna(0)"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "DJEj6LKH-1il",
@@ -2751,24 +2940,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "952a2f83-fb17-42f5-e344-8279a571cbe9"
+        "outputId": "a5ae4d01-4411-410b-e9c0-0427c48ae411"
       },
       "source": [
         "train.shape"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(307511, 545)"
+              "(307511, 718)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 54
+          "execution_count": 10
         }
       ]
     },
