--- a/table_agg_hame_credit.ipynb
+++ b/table_agg_hame_credit.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "cM9ShLoKEYzy"
       ],
-      "authorship_tag": "ABX9TyNQadVGqIPsBHp/oEka7CA0",
+      "authorship_tag": "ABX9TyNW/hA5edncPUmcMI4Y1yS4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2958,6 +2958,54 @@
             "tags": []
           },
           "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MDYhwbta2500",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for col in train.columns: \n",
+        "  if len(train[col].unique()) == 1:\n",
+        "    train.drop(columns=[col], inplace=True)\n",
+        "\n",
+        "\n",
+        "# при расчете корреляция появлялись Nanы - из за отсутствия дисперсии в колонках"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cnc3fb_t3kTt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "517319bf-2b03-4096-b557-49be94efd248"
+      },
+      "source": [
+        "train.shape"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(307511, 656)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
         }
       ]
     },
