--- a/home_credit.ipynb
+++ b/home_credit.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "home_credit.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPawv3oCZogQP8Mb2w6eb7E",
+      "authorship_tag": "ABX9TyN4DXnLzT7VRw4gY6ASiP4Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1343,7 +1343,11 @@
       "metadata": {
         "id": "fD2ZRxquYUsJ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 156
+        },
+        "outputId": "eaf8d82b-3e4d-44ab-9041-62a9f9377e57"
       },
       "source": [
         "from sklearn.model_selection import RandomizedSearchCV, cross_validate\n",
@@ -1366,45 +1370,101 @@
         "grid.fit(X_train, y_train)\n",
         "print(f'{grid.best_estimator_}, {grid.best_score_}')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+            "              colsample_bynode=1, colsample_bytree=1, eval_metric='auc',\n",
+            "              gamma=0, learning_rate=0.01, max_delta_step=0, max_depth=4,\n",
+            "              min_child_weight=1, min_data_in_leaf=100, missing=None,\n",
+            "              n_estimators=2000, n_jobs=1, nthread=None,\n",
+            "              objective='binary:logistic', random_state=0, reg_alpha=0.25,\n",
+            "              reg_lambda=0, scale_pos_weight=11.387150050352467, seed=None,\n",
+            "              silent=None, subsample=0.4, tree_method='gpu_hist', verbosity=1), 0.7731921697243959\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0dQ9dgLcZkO_",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7837d864-6da4-4328-f872-b2d752bae0ec"
       },
       "source": [
+        "model = XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+        "              colsample_bynode=1, colsample_bytree=1, eval_metric='auc',\n",
+        "              gamma=0, learning_rate=0.01, max_delta_step=0, max_depth=4,\n",
+        "              min_child_weight=1, min_data_in_leaf=100, n_estimators=2000, n_jobs=-1,\n",
+        "              objective='binary:logistic', random_state=0, reg_alpha=0.25,\n",
+        "              reg_lambda=0, scale_pos_weight=11.387150050352467, tree_method='gpu_hist', verbosity=1)\n",
         "\n",
-        "model = grid.best_estimator_\n",
         "scores = cross_validate(model, X_train, y_train, scoring=[\n",
         "                        'accuracy', 'roc_auc', 'precision', 'recall'], cv=3, return_train_score=True, n_jobs=1)\n",
         "\n",
         "i_accuracy = np.mean(scores['test_accuracy'])\n",
         "i_roc_auc = np.mean(scores['test_roc_auc'])\n",
         "i_precision = np.mean(scores['test_precision'])\n",
-        "i_recall = np.mean(scores['test_reacall'])\n",
+        "i_recall = np.mean(scores['test_recall'])\n",
         "\n",
-        "print('accuracy: %.3f | roc_auc: %.3f | precision: %.3f | recall: %.3f' % (i_accuracy, i_roc_auc, i_precision, i_recall))\n",
-        "gc.collect()"
+        "print('accuracy: %.3f | roc_auc: %.3f | precision: %.3f | recall: %.3f' % (i_accuracy, i_roc_auc, i_precision, i_recall))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "accuracy: 0.726 | roc_auc: 0.772 | precision: 0.180 | recall: 0.673\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ekjcJorZZZ2_",
+        "id": "Fr0-_73w7RCF",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        },
+        "outputId": "d7b74891-24b5-4ff5-bb71-c6e4fac3e0e0"
       },
       "source": [
-        "grid.best_params_"
+        "gb_clf = XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+        "              colsample_bynode=1, colsample_bytree=1, eval_metric='auc',\n",
+        "              gamma=0, learning_rate=0.01, max_delta_step=0, max_depth=4,\n",
+        "              min_child_weight=1, min_data_in_leaf=100, n_estimators=2000, n_jobs=-1,\n",
+        "              objective='binary:logistic', random_state=0, reg_alpha=0.25,\n",
+        "              reg_lambda=0, scale_pos_weight=11.387150050352467, tree_method='gpu_hist', verbosity=1).fit(X_train, y_train)\n",
+        "              \n",
+        "print('accuracy_score:', accuracy_score(y_test, gb_clf.predict(X_test)))\n",
+        "print('precision_score:', precision_score(y_test, gb_clf.predict(X_test)))\n",
+        "print('recall_score:', recall_score(y_test, gb_clf.predict(X_test)))\n",
+        "print('roc_auc_score:',roc_auc_score(y_test, gb_clf.predict_proba(X_test)[:, 1]))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "accuracy_score: 0.7205339576931207\n",
+            "precision_score: 0.1783442838370565\n",
+            "recall_score: 0.6855930491008284\n",
+            "roc_auc_score: 0.7752797439709559\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
